--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 
                 <div class="btn-box">
                     <button class="btn-primary" onclick="scrollToSection('contact')">Hire Me</button>
-                    <button class="btn-secondary" id="download-cv">Download CV</button>
+                    <a href="assests/Naveen_Daniel_CV.pdf" download="Naveen_Daniel_CV.pdf" class="btn-secondary" style="text-decoration: none; display: inline-flex; align-items: center; justify-content: center;">Download CV</a>
                 </div>
                 
                 <div class="social-links">
